--- a/package.json
+++ b/package.json
@@ -20,7 +20,12 @@
     "@babel/core": "^7.15.5",
     "@babel/preset-env": "^7.15.4",
     "@babel/register": "^7.15.3",
-    "gulp": "^4.0.2"
+    "gulp": "^4.0.2",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-if": "^3.0.0",
+    "gulp-sass": "^5.0.0",
+    "sass": "^1.39.0",
+    "yargs": "^17.1.1"
   },
   "dependencies": {}
 }
