--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-clean-css": "^4.3.0",
     "gulp-if": "^3.0.0",
     "gulp-sass": "^5.0.0",
+    "gulp-sourcemaps": "^3.0.0",
     "sass": "^1.39.0",
     "yargs": "^17.1.1"
   },
