--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/core": "^7.15.5",
     "@babel/preset-env": "^7.15.4",
     "@babel/register": "^7.15.3",
+    "babel-loader": "^8.2.2",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.3.0",
@@ -29,6 +30,9 @@
     "gulp-sass": "^5.0.0",
     "gulp-sourcemaps": "^3.0.0",
     "sass": "^1.39.0",
+    "vinyl-named": "^1.1.0",
+    "webpack": "^5.52.0",
+    "webpack-stream": "^7.0.0",
     "yargs": "^17.1.1"
   },
   "dependencies": {}
